Set min height on pre code to avoid language and copy overlapping

--- a/assets/scss/typography/_pre.scss
+++ b/assets/scss/typography/_pre.scss
@@ -46,6 +46,10 @@ pre {
   }
   code {
     position: relative;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    min-height: 6rem;
     padding: 1rem 3rem 1rem 1rem;
     overflow-y: auto;
     white-space: inherit;
